k8s/4.cannary_relase/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istiogateway-vs
spec:
  hosts:
  - "*"
  gateways:
  - factory-gateway
  http:
    - match:
      - uri:
          exact: "/"
      - uri:
          exact: ""
      - uri:
          prefix: "/static"
      route:
      - destination:
          port:
            number: 80
          host: frontend
          subset: v2
        weight: 2
      - destination:
          port:
            number: 80
          host: frontend
          subset: v3
        weight: 1
    - match:
      - uri:
          exact: "/api"
      route:
      - destination:
          port:
            number: 3000
          host: bottling-plant
